More tidy up after removing Spring